# project-rogue

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindSDL2_gpu.cmake
include/: cm_abilities.h  cm_action.h  cm_action_move.h  cm_actor.h  cm_assets.h  cm_camera.h  cm_color.h  cm_component.h  cm_component_enemy_render.h  cm_component_player_render.h  cm_component_render.h  cm_effect.h  cm_enemy.h  cm_game.h  cm_game_world.h  cm_input.h  cm_input_handler.h  cm_inventory.h  cm_logger.h  cm_player.h  cm_random.h  cm_renderer.h  cm_renderer_sdl_gpu.h  cm_stats.h  cm_tile.h  cm_world.h
include/actions/: cm_abilityaction.h  cm_action.h  cm_attackaction.h  cm_equipaction.h  cm_exitlevelaction.h  cm_moveaction.h  cm_pickupaction.h  cm_useaction.h  cm_waitaction.h
include/components/: cm_component.h  cm_component_enemy_movement.h  cm_component_enemy_render.h  cm_component_player_movement.h  cm_component_player_render.h  cm_component_render.h
include/game/: cm_abilities.h  cm_actor.h  cm_actor_stat.h  cm_combat.h  cm_effect.h  cm_enemy.h  cm_game_world.h  cm_inventory.h  cm_item.h  cm_modifier.h  cm_pathfinder.h  cm_player.h
include/graphics/: cm_assets.h  cm_color.h  cm_renderer_sdl2.h  cm_renderer_sdl_gpu.h
include/input/: cm_input.h  cm_input_handler_sdl.h
include/items/: cm_item.h  cm_potion.h
include/map/: cm_boss_map.h  cm_cellular_automata_map.h  cm_map.h  cm_mapgen.h  cm_room_accretion_map.h  cm_tile.h
include/utils/: cm_containers.h  cm_math.h  cm_random.h
lib/: clone_libs.sh
src/: CMakeLists.txt  cm_abilities.cpp  cm_action_move.cpp  cm_actor.cpp  cm_assets.cpp  cm_camera.cpp  cm_component.cpp  cm_component_player_movement.cpp  cm_component_player_render.cpp  cm_component_render.cpp  cm_effect.cpp  cm_enemy.cpp  cm_game.cpp  cm_game_world.cpp  cm_input.cpp  cm_input_handler_sdl.cpp  cm_inventory.cpp  cm_logger.cpp  cm_player.cpp  cm_random.cpp  cm_renderer_sdl_gpu.cpp  cm_world.cpp  main.cpp
src/actions/: cm_abilityaction.cpp  cm_action.cpp  cm_attackaction.cpp  cm_equipaction.cpp  (+5 more)
test/: cm_random_test.cpp  demo_test.cpp
(+50 files in other folders)
